--- a/atcoder/compete.toml
+++ b/atcoder/compete.toml
@@ -22,6 +22,8 @@ test-suite = "{{ manifest_dir }}/testcases/{{ bin_alias }}.yml"
 
 [template]
 src = '''
+use proconio::input;
+
 fn main() {
     todo!();
 }
@@ -126,7 +128,7 @@ path = "./{{ contest }}"
 
 [test]
 # Toolchain for the test. (optional)
-toolchain = "1.42.0"
+toolchain = ""
 # Profile for `cargo build`. ("dev" | "release")
 #
 # Defaults to `"dev"`.
