--- a/atcoder/abc286/testcases/b.yml
+++ b/atcoder/abc286/testcases/b.yml
@@ -6,31 +6,25 @@ match: Lines
 cases:
   - name: sample1
     in: |
-      2 3
-      GCP
-      PPP
-      CCC
-      PPC
-    out: |
-      3
-      1
-      2
       4
+      naan
+    out: |
+      nyaan
   - name: sample2
     in: |
-      2 2
-      GC
-      PG
-      CG
-      PP
-    out: |
-      1
-      2
-      3
       4
+      near
+    out: |
+      near
+  - name: sample3
+    in: |
+      8
+      national
+    out: |
+      nyationyal
 
 extend:
   - type: Text
-    path: "./c"
+    path: "./b"
     in: /in/*.txt
     out: /out/*.txt
