--- a/atcoder/abc286/testcases/c.yml
+++ b/atcoder/abc286/testcases/c.yml
@@ -6,19 +6,19 @@ match: Lines
 cases:
   - name: sample1
     in: |
-      4
-      1
-      7
-      10
-      999983
+      5 1 2
+      rrefa
     out: |
-      1
-      6
-      -1
-      999982
+      3
+  - name: sample2
+    in: |
+      8 1000000000 1000000000
+      bcdfcgaa
+    out: |
+      4000000000
 
 extend:
   - type: Text
-    path: "./g"
+    path: "./c"
     in: /in/*.txt
     out: /out/*.txt
