--- a/atcoder/abc286/testcases/g.yml
+++ b/atcoder/abc286/testcases/g.yml
@@ -6,28 +6,32 @@ match: Lines
 cases:
   - name: sample1
     in: |
-      2
-      1 1
+      6 6
+      1 3
       2 3
+      3 4
+      4 5
+      4 6
+      5 6
+      4
+      1 2 4 5
     out: |
-      5
+      Yes
   - name: sample2
     in: |
+      6 5
+      1 2
+      1 3
+      1 4
+      1 5
+      1 6
       3
-      2 2 2
-      2 2 2
+      1 2 3
     out: |
-      1
-  - name: sample3
-    in: |
-      10
-      1 2 3 4 5 6 7 8 9 10
-      1 4 9 16 25 36 49 64 81 100
-    out: |
-      978222082
+      No
 
 extend:
   - type: Text
-    path: "./d"
+    path: "./g"
     in: /in/*.txt
     out: /out/*.txt
